src/test/deca/syntax/invalid/SansObjet/SemiApresCrochet.deca
//Description
//  test de ; apres }
//
//Réponse
//  Erreur de syntaxe en ligne 9
//  extraneous input ';' expecting <EOF>


{
};